new Integer(fId)
fixed new Integer(fId)
is deprecated